--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
 ---
-layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+layout: page
+title: Home
+subtitle: Welcome to my personal site!
 ---
+
+<div class="home-content">
+  <h2>Hello! 👋</h2>
+  <p>
+    I'm <strong>Adrin Fabiorenski Wijaya</strong>, a Data Engineer passionate about turning raw data into meaningful insights.
+  </p>
+  <p>
+    Feel free to explore:
+    <ul>
+      <li><a href="/aboutme">About Me</a></li>
+      <li><a href="/experience">Work Experience</a></li>
+    </ul>
+  </p>
+  <p>
+    Interested in data pipelines, distributed systems, and the future of AI? Let’s connect and share ideas!
+  </p>
+</div>
