--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ subtitle: Welcome to my personal site!
     <ul>
       <li><a href="/aboutme">About Me</a></li>
       <li><a href="/experience">Work Experience</a></li>
-      <li><a href="/education">Work Experience</a></li>
+      <li><a href="/education">Education</a></li>
     </ul>
   </p>
   <p>
