add photo in index

--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@ title: Home
 subtitle: Welcome to my personal site!
 ---
 
-<div class="home-content">
-  <h2>Hello! 👋</h2>
-  <p>
-    I'm <strong>Adrin Fabiorenski Wijaya</strong>, a Data Engineer passionate about turning raw data into meaningful insights.
-  </p>
-  <p>
-    Feel free to explore:
-    <ul>
-      <li><a href="/aboutme">About Me</a></li>
-      <li><a href="/experience">Work Experience</a></li>
-      <li><a href="/education">Education</a></li>
-    </ul>
-  </p>
-  <p>
-    Interested in data pipelines, distributed systems, and the future of AI? Let’s connect and share ideas!
-  </p>
+<div class="home-content" style="display: flex; align-items: center; gap: 2rem;">
+  <!-- Foto profil -->
+  <div class="profile-photo" style="flex-shrink: 0;">
+    <img src="/assets/img/avatar-icon.png" alt="Profile Photo" style="width: 200px; height: 200px; object-fit: cover; border-radius: 50%;">
+  </div>
+
+  <!-- Nama dan bio -->
+  <div class="profile-info">
+    <h2>Hello! 👋</h2>
+    <h3><strong>Adrin Fabiorenski Wijaya</strong></h3>
+    <p>
+      Data Engineer passionate about building data pipelines, distributed systems, and unlocking insights from complex data.
+    </p>
+    <p>
+      Feel free to explore:
+      <ul>
+        <li><a href="/aboutme">About Me</a></li>
+        <li><a href="/experience">Work Experience</a></li>
+        <li><a href="/education">Education</a></li>
+        <li><a href="/resume">Resume</a></li>
+      </ul>
+    </p>
+    <p>
+      Let's connect and share ideas!
+    </p>
+  </div>
 </div>
