--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@ subtitle: Welcome to my personal site!
 ---
 
 <!-- Foto profil -->
-<div class="profile-photo" style="flex-shrink: 0;">
-  <img src="/assets/img/avatar-icon.png" alt="Profile Photo" style="width: 200px; height: 200px; object-fit: cover; border-radius: 50%;">
+<div class="home-info-container">
+	<div class="home-img-container">
+		<img src="/assets/img/avatar-icon.png">
+	</div>
+	<div class="home-info-text">
+		<h1>Test Nama</h1>
+		<p style="font-size: 14px;">"We can't control the ocean, but we can learn how to surf the waves."</p>
+	</div>
+
 </div>
-<div class="home-content" style="display: flex; align-items: center; gap: 2rem;">
 
 
   <!-- Nama dan bio -->
