--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ subtitle: Welcome to my personal site!
 <!-- Foto profil -->
 <div class="home-info-container">
 	<div class="home-img-container">
-		<img src="/assets/img/avatar-icon.png">
+		<img src="/assets/img/avatar-icon.png", rounded="true", alt="Avatar" class="home-img">
 	</div>
 	<div class="home-info-text">
 		<h1>Test Nama</h1>
